--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,17 +1,29 @@
 {
   "manifest_version": 3,
   "name": "AWS請求書ツール",
-  "version": "1.0",
+  "version": "2.0.0",
   "description": "AWS請求書を便利にする拡張機能",
-  "browser_action": {
-    "default_popup": "popup.html",
-    "default_icon": {
-      "16": "images/icon16.png",
-      "48": "images/icon48.png",
-      "128": "images/icon128.png"
-    }
+  "action": {
+    "default_popup": "popup.html"
   },
+  "icons": {
+    "16": "images/icon16.png",
+    "48": "images/icon48.png",
+    "128": "images/icon128.png"
+  },
+  "content_scripts": [
+    {
+      "matches": [
+        "https://us-east-1.console.aws.amazon.com/billing/*"
+      ],
+      "js": [
+        "content.js"
+      ]
+    }
+  ],
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "clipboardWrite",
+    "scripting"
   ]
 }
